--- a/src/main/resources/homework03/homework03_statistic.org
+++ b/src/main/resources/homework03/homework03_statistic.org
@@ -12,6 +12,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSer_GEL-haPCsokLapdFOBcXGhNa62s
 | 2 | 22.11.2020 16:40 | 22.11.2020 : 19:50 |                             | 11/11           |     100 | Pass   |
 | 3 | 07.02.2021 19:00 | 07.02.2020 : 19:10 |                         0.9 | 11/11           |     100 | Pass   |
 | 4 | 19.11.2022       |                    |                             |                 |      81 | Pass   |
+| 5 | 25.12.2022       |                    |                             |                 |      81 | Pass   |
 
 
 
