--- a/src/main/resources/homework06/homework06_statistic.org
+++ b/src/main/resources/homework06/homework06_statistic.org
@@ -11,3 +11,4 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfz64I0Md5MMF9t0yPv3KmqtRtZts_u
 | 1 | 26.11.2022 |          |                             |                 |      15 | Fall   |
 | 2 | 27.11.2022 |          |                             |                 |      60 | Fall   |
 | 3 | 04.12.2022 |          |                             |                 |      77 | Pass   |
+| 4 | 27.12.2022 |          |                             |                 |      77 | Pass   |
