--- a/src/main/resources/homework07/homework07_statistic.org
+++ b/src/main/resources/homework07/homework07_statistic.org
@@ -16,6 +16,7 @@ Test#1
 | 5 | 11.04.2021 11:15 | 03.04.2021 14:40 |                         1.8 | 10/13           |      76 | Pass   |
 | 6 | 26.11.2022       |                  |                             |                 |      61 | Fail   |
 | 7 | 04.12.2022       |                  |                             | 11/13           |      84 | Pass   |
+| 8 | 27.12.2022       |                  |                             |                 |      69 | Pass   |
 
 
 
