--- a/src/main/resources/homework08/homework08_statistic.org
+++ b/src/main/resources/homework08/homework08_statistic.org
@@ -15,6 +15,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSerrz1yejTy0UCCOrHPzbGU0YKQ3ZZu
 | 4 | 04.04.2021 20:20 | 04.04.2021 20:30 |                         1.0 | 6/10            |      60 | Fail   |
 | 5 | 11.04.2021 10:30 | 04.04.2021 10:46 |                         1.6 | 6/10            |      60 | Fail   |
 | 6 | 04.12.2022       |                  |                             | 8/10            |      80 | Pass   |
+| 7 | 29.12.2022       |                  |                             |                 |      80 | Pass   |
 
 
 
