--- a/src/main/resources/homework09/homework09_statistic.org
+++ b/src/main/resources/homework09/homework09_statistic.org
@@ -18,6 +18,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSfw2tGT1VRB_T6VeXImuwMmXYbwJlDD
 |  8 | 11.04.2021 12:05 | 11.04.2021 12:20 |                         0.8 | 10/12           |      83 | Pass   |
 |  9 | 04.12.2022       |                  |                             | 9/12            |      76 | Pass   |
 | 10 | 29.12.2022       |                  |                             |                 |      66 | Fail   |
+| 11 | 30.12.2022       |                  |                             |                 |     100 | Pass   |
 
 
 
