--- a/src/main/resources/homework10/homework10_statistic.org
+++ b/src/main/resources/homework10/homework10_statistic.org
@@ -12,6 +12,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSdA1sG2c7MYsEuD9mbpy6voaMfcbJuw
 | 2 | 10.02.2021 20:20 | 10.02.2021 21:30 |                         1.4 | 37/50           |      74 | Pass   |
 | 3 | 12.02.2021 13:50 | 12.02.2021 14:30 |                         0.8 | 44/50           |      88 | Pass   |
 | 4 | 18.12.2022       |                  |                             | 38/50           |      76 | Pass   |
+| 5 | 30.12.2022       |                  |                             |                 |      84 | Pass   |
 
 
 
