--- a/src/main/resources/homework12/homework12_statistic.org
+++ b/src/main/resources/homework12/homework12_statistic.org
@@ -1,6 +1,7 @@
 ДЗ#12: Конструкции if и if-else, а также тернарный оператор  
 
 Test: https://forms.gle/UBt2b9iCcYPbkkyB6
+Answer: https://docs.google.com/forms/d/e/1FAIpQLSeu0zwsvAPVfoW7gdibciBGjhrLNazz4dsIK7AXVuw_JlF4Xg/viewscore?viewscore=AE0zAgCXTgmjjumWoK5TBw749B7mXZVeZOem9KbBxuPBF1PesycTxZwYxUKaaXOXH8oZ_r0
 
 Мин. кол-во % для прохождения теста: 65%
 Максимальное время ответа на один вопрос: 2 мин. 
@@ -11,6 +12,7 @@ Test: https://forms.gle/UBt2b9iCcYPbkkyB6
 | 2 | 14.02.2021 16:10 | 14.02.2021 16:30 |                         1.4 | 11/13           |      84 | Pass   |
 | 3 | 23.04.2021 12:10 | 23.04.2021 16:30 |                         1.5 | 8/13            |      61 | Fail   |
 | 4 | 24.04.2021 12:00 | 24.04.2021 11:20 |                         1.6 | 11/13           |      84 | Pass   |
+| 5 | 08.01.2023       |                  |                             |                 |      84 | Pass   |
 
 
 
