--- a/src/main/resources/homework18/homework18_statistic.org
+++ b/src/main/resources/homework18/homework18_statistic.org
@@ -12,7 +12,7 @@ Answer: https://docs.google.com/forms/d/e/1FAIpQLSdKZFqSaaGPveUnFrmKktLW_5Vz9qv1
 | 2 | 17.01.2021 21:35 | 17.01.2021 22:00 |                        0.86 | 24/29           |      82 | Pass   |
 | 3 | 28.02.2021 15:10 | 28.02.2021 15:55 |                         1.5 | 16/29           |      53 | Fail   |
 | 4 | 01.03.2021 12:25 | 01.03.2021 13:10 |                         1.5 | 23/29           |      79 | Pass   |
-| 5 | 29.01.2023       |                  |                             |                 |         |        |
+| 5 | 29.01.2023       |                  |                             | 22/29           |      77 | Pass   |
 
 
 
